Add some changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -195,6 +195,14 @@ form {
   }
 }
 
+.text {
+  text-transform: uppercase;
+  font-weight: 900;
+  text-shadow: 3px 3px rgb(48, 45, 45);
+  letter-spacing: 1px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
 // #######******TABLE STYLES END*******########
 
 // #########********HOMEPAGE DESIGN*******##########
