--- a/app/views/layouts/_homepage.html.erb
+++ b/app/views/layouts/_homepage.html.erb
@@ -173,7 +173,7 @@
       <span>
         <i class="fas fa-laptop-house fa-3x"></i> 
         <span>
-          Properties &nbsp;
+          Property Records &nbsp;
           <i class='fas fa-angle-right'></i>
         </span>
       </span>
