--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -196,10 +196,11 @@ form {
 }
 
 .text {
-  text-transform: uppercase;
+  // text-transform: uppercase;
   font-weight: 900;
   text-shadow: 3px 3px rgb(48, 45, 45);
   letter-spacing: 1px;
+  font-size: 17px;
   font-family: 'Times New Roman', Times, serif;
 }
 
