Add some changes to the sidebar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -285,6 +285,7 @@ form {
                 text-shadow: 3px 3px rgb(48, 45, 45);
                 letter-spacing: 1px;
                 font-family: 'Times New Roman', Times, serif;
+                opacity: 0.7;
 
                 &:hover {
                   background-color: #f3072e;
@@ -553,6 +554,7 @@ form {
                 text-shadow: 3px 3px rgb(48, 45, 45);
                 letter-spacing: 1px;
                 font-family: 'Times New Roman', Times, serif;
+                opacity: 0.7;
 
                 &:hover {
                   background-color: #f3072e;
