--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -568,11 +568,13 @@ form {
       div {
         span {
           padding-top: 8px;
-          padding-left: 0.8rem;
+          padding-left: 1.4rem;
           display: flex;
           justify-content: space-between;
           align-items: center;
           justify-items: center;
+          margin-left: auto;
+          margin-right: auto;
 
           label[for="control2"] {
             display: none;
