Add styles for forms

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -755,6 +755,7 @@ form {
 }
 
 @import url('./tables.scss');
+@import url('./forms.scss');
 
 $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
