--- a/app/views/layouts/_homepage.html.erb
+++ b/app/views/layouts/_homepage.html.erb
@@ -161,7 +161,7 @@
 
       <section>
         <div class="heading">
-          <p>SEEDBEB PLANTING</p>
+          <p>SEEDBED PLANTING</p>
         </div>
         <ul class="section-links">
           <li><%= link_to 'Seed Bed', seedbeds_path, class:"has-text-white" %></li>
