Add more changes

--- a/app/views/layouts/_homepage.html.erb
+++ b/app/views/layouts/_homepage.html.erb
@@ -111,7 +111,7 @@
       </section>
     </div>
 
-    <div class="row6">
+    <div class="row6" draggable='true'>
       <span>
         <i class="fas fa-funnel-dollar fa-3x"></i> 
         <span>
@@ -131,7 +131,7 @@
       </section>
     </div>
 
-    <div class="row7">
+    <div class="row11">
       <span>
         <i class="fab fa-adversal fa-3x"></i> 
         <span>
@@ -199,7 +199,7 @@
       </span>
     </div>
 
-    <div class="row11">
+    <div class="row7">
       <span>
         <i class="fas fa-cogs fa-3x"></i> 
         <span>
