--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,8 +14,8 @@
               </a>
 
               <div class="navbar-dropdown has-background-dark">
-                <%= link_to "Client Payments", client_payments_path, class:"navbar-item has-text-white" %>
-                <%= link_to "Mkt Payments", mkt_payments_path, class:"navbar-item has-text-white" %>
+                <%= link_to "Client Payments", client_payments_path, class:"navbar-item text has-text-white" %>
+                <%= link_to "Mkt Payments", mkt_payments_path, class:"navbar-item text has-text-white" %>
                 <a class="navbar-item">
                   Contact
                 </a>
