--- a/app/views/layouts/_homepage.html.erb
+++ b/app/views/layouts/_homepage.html.erb
@@ -1,6 +1,6 @@
 <div class="page-navigation">
   <div class="rows">
-    <div class="row1">
+    <div class="row1" tab-index="1">
       <span>
         <i class="fas fa-cog fa-3x"></i> 
         <span>
@@ -19,7 +19,7 @@
       </section>
     </div>
 
-    <div class="row2">
+    <div class="row2" tab-index="2">
       <span>
         <i class="far fa-money-bill-alt fa-3x"></i> 
         <span>
@@ -43,7 +43,7 @@
       </section>
     </div>
 
-    <div class="row3">
+    <div class="row3" tab-index="1">
       <span>
         <i class="fas fa-warehouse fa-3x"></i> 
         <span>
